--- a/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
+++ b/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
@@ -12,7 +12,7 @@
             <h2 class="text-primary">Category List</h2>
         </div>
         <div class="col-6 text-end">
-            <a  asp-page="categories/create" class="btn btn-primary"><i class="bi bi-plus-circle"></i> Create New Category</a>
+            <a  asp-page="/categories/create" class="btn btn-primary"><i class="bi bi-plus-circle"></i> Create New Category</a>
         </div>
     </div>
 <table class="table table-bordered table-striped">
@@ -31,10 +31,10 @@
             <td>@obj.DisplayOrder</td>
             <td>
                 <div class="w-75 btnbtn-group" role="group">
-                            <a  asp-page="Categories/Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <a  asp-page="/categories/Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
-                            <a  asp-action="Categories/Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <a  asp-action="/categories/Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i> Delete
                             </a>
                 </div>
