--- a/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
+++ b/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
@@ -34,7 +34,7 @@
                             <a  asp-page="/categories/Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
-                            <a  asp-action="/categories/Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <a  asp-Page="/categories/Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i> Delete
                             </a>
                 </div>
