--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -17,7 +17,7 @@
                     <h2 class="text-primary">Product List</h2>
                 </div>
                 <div class="col-6 text-end">
-                    <a asp-action="Create" class="btn btn-primary"><i class="bi bi-plus-circle"></i> Create New Product</a>
+                    <a asp-action="Upsert" class="btn btn-primary"><i class="bi bi-plus-circle"></i> Create New Product</a>
                 </div>
             </div>
             <table class="table table-bordered table-striped">
@@ -45,7 +45,7 @@
                             <td></td>
                             <td>
                                 <div class="w-75 btnbtn-group" role="group">
-                                    <a asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                    <a asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                         <i class="bi bi-pencil-square"></i> Edit
                                     </a>
                                     <a asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
